Fri Apr  8 23:37:33 2005  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmimecache.c: Actually add the file.  Also, patch from
	Matthias Clasen <mclasen@redhat.com> to fix small bugs, #2939

Fri Apr  1 14:59:43 2005  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmimecache.c: Patch from Matthias Clasen to mmap the
	cached xdg file.

Mon Mar 28 13:58:32 2005  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmimeglob.c (_xdg_glob_hash_insert_text): patch from
	Matthias Clasen to handle globs that don't have '.' chars in
	them.  As an example 'foo~' should match '*~'

Mon Mar 21 13:16:12 2005  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmime.c (xdg_mime_shutdown): fix from  Axel Liljencrantz
	<f97-ali@nada.kth.se> to free parent_list in shutdown.

2005-01-10  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name): make previous
	commit actually work...

2005-01-10  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name): don't get
	confused by multiple dots in filenames when doing extension matching

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmime.h:

	 wrap new API in XDG_ENTRY()

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name):

	Do not assume the filename is UTF8. We just need to look
	for the dot which is ASCII.

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeint.h:

	Remove spacings I introduced by mistake

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimealias.c: (_xdg_mime_alias_read_from_file):
	* src/xdgmimeint.c: (_xdg_ucs4_to_lower):
	* src/xdgmimeint.h:
	* src/xdgmimeparent.c: (_xdg_mime_parent_read_from_file):

	Check in Mariano Suárez-Alvarez <msuarezalvarez@arnet.com.ar> patch
	for GNOME bug #160838.

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_node_lookup_file_name):
	* src/xdgmimeint.c: (_xdg_ucs4_to_lower):