@@ -1,3 +1,10 @@
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
+	* src/test-mime.c: (main): disabled call to xdg_mime_dump for now
+	* src/xdgmimemagic.c: (_xdg_mime_magic_matchlet_compare_to_data):
+	fixed off by 1 error when handling offsets, fixes bug #2050 and 
+	partly bug #2359
+
 Fri Apr  8 23:37:33 2005  Jonathan Blandford  <jrb@redhat.com>
 
 	* src/xdgmimecache.c: Actually add the file.  Also, patch from
